--- a/src/theme/DocSidebar/Desktop/styles.module.css
+++ b/src/theme/DocSidebar/Desktop/styles.module.css
@@ -4,7 +4,8 @@
     padding-bottom: 0;
     background-color: var(--ifm-background-color);
     position: sticky;
-    top: var(--ifm-navbar-height);
+    /* top: var(--ifm-navbar-height); */
     z-index: 10;
     margin-bottom: -16px; /* Negative margin to remove any remaining gap */
   }
+ 
